// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label matches snapshot: enzyme.mount 1`] = `
<glamorous(label)>
  <label
    className="css-1b081ox"
  >
    example
  </label>
</glamorous(label)>
`;

exports[`Label matches snapshot: enzyme.render 1`] = `
<label
  class="css-1b081ox"
>
  example
</label>
`;

exports[`Label matches snapshot: enzyme.shallow 1`] = `
<label
  className="css-1b081ox"
>
  example
</label>
`;
